arrumei a tag form

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <h1>Formulário de Cadastro</h1>
-    <label for="name">Nome: </label><input type="text" placeholder="Nome Completo" name="name" id="name">
-    <br />
-    <label for="mail">E-mail: </label><input type="email" placeholder="Seu email" name="mail" id="mail">
-    <br />
-    <label for="pass">Senha: </label><input type="password" placeholder="********" name="pass" id="pass">
-    <br />
-    <button type="submit">Cadastrar</button>
+    <form action="">
+        <label for="name">Nome: </label><input type="text" placeholder="Nome Completo" name="name" id="name">
+        <br />
+        <label for="mail">E-mail: </label><input type="email" placeholder="Seu email" name="mail" id="mail">
+        <br />
+        <label for="pass">Senha: </label><input type="password" placeholder="********" name="pass" id="pass">
+        <br />
+        <button type="submit">Cadastrar</button>
+    </form>
 </body>
 </html>
