--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Formulário de Cadastro</h1>
-    <form action="">
+    <form>
         <label for="name">Nome: </label><input type="text" placeholder="Nome Completo" name="name" id="name">
         <br />
         <label for="mail">E-mail: </label><input type="email" placeholder="Seu email" name="mail" id="mail">
